2010-02-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)
	* Fixed bug #13249: XSS in TS Object Browser (thanks to Marcus Krause)

2010-02-22  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12958: Catchable fatal error in indexed_search

2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13406: thumbs.php: Thumbnails for images with transparent background look ugly (Thanks to Andreas Wolf and Steffen Ritter)

2010-02-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12220: String literals quoted as identifiers

2010-02-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13388: Missing colon in locallang for DB and File mount (thanks to Georg Ringer)

2010-01-27  Xavier Perseguers  <typo3@perseguers.ch

	* Fixed bug #12553: Text "A simple table with up to 8 columns" is wrong (Thanks to Georg Ringer)

2010-01-18  Benjamin Mack  <benni@typo3.org>

	* Fixed #11089: Fixing the built-in shopping basket (Thanks to Mathias Schreiber)

2010-01-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13255: Wrong text in wizard "create multiple pages" (Thanks to Georg Ringer)

2010-01-14  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.11

2010-01-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11968: Sporadic random Backend Logoffs / Add X-UA-Compatible flag (Thanks to Steffen Gebert)

2010-01-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12507: (Un)Install icon points to wrong extension in Opera (Thanks to Steffen Gebert)

2010-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.7.14

2010-01-05  Benjamin Mack  <benni@typo3.org>
